added message_helper
