# api/helpers/response_handler.js
@@ -1,0 +1,10 @@
+const lazy = require('lazy')
+
+
+const pick_data =(obj)=>{ 
+    lazy(obj).pick(['categoryName','categories'])
+    }
+
+module.exports={
+    pick_data
+}
