# api/swagger/swagger.yaml
@@ -190,7 +190,7 @@ paths:
           description: Success
           schema:
             # a pointer to a definition
-            $ref: "#/definitions/SuccessResponse"
+            $ref: "#/definitions/ToneDetails"
         # responses may fall through to errors
         default:
           description: Error
@@ -224,4 +224,18 @@ definitions:
       username:
         type: string
 
-
+  ToneDetails:
+    type: object
+    properties:
+      categoryName:
+        type: string
+      categories:
+        type: array
+        items:
+          type: object
+          properties:
+              toneName:
+                type: string
+              score:
+                type: integer
+          
